@@ -18,11 +18,7 @@
 
 # Headers in this file shall remain intact.
 
-
-import gtk.glade
-
 from flumotion.admin.gtk import wizard
-
 
 # A wizard run when the user first starts flumotion.
 
